# sdd-grader

./: .gitignore  .pre-commit-hooks.yaml  README.md  pyproject.toml
.playwright-mcp/: page-2026-07-03T00-12-51-709Z.yml  page-2026-07-03T00-13-55-670Z.yml
corpus/: README.md
docs/: api-judge.md  architecture.md  ci-sarif.md  eval.html  index.html  release.md  roadmap.md
reports/: IMPROVEMENT-STATE.md
scripts/: benchmark.py  screenshots.py
sddgrade/: __init__.py  advisor.py  banner.py  catalog.py  cli.py  config.py  dashboard.py  discovery.py  history.py  interactive.py  model.py  runner.py
sddreview/: __init__.py  advisor.py  catalog.py  cli.py  config.py  dashboard.py  discovery.py  history.py  model.py  runner.py
tests/: conftest.py  test_adapter_structural_seam.py  test_agent_scaffold.py  test_api_judge.py  test_cli.py  test_cli_tool_config.py  test_cli_ux.py  test_confidence.py  test_config_unknown_keys.py  test_constitution_crosscheck.py  test_corpus.py  test_ears_29148.py  test_escape_clause.py  test_gherkin_malformed_ac.py  test_html.py  test_judge_dedup.py  test_judge_fixes.py  test_judge_hardening.py  test_judge_injection_guard.py  test_lint_false_positives.py  test_negative_requirement.py  test_nfr.py  test_openspec.py  test_passive_voice.py  test_plan_missing_observability.py  test_plan_missing_rollback.py  test_plan_missing_security.py  test_plan_no_testing_strategy.py  test_precommit_hook.py  test_report_common.py  test_req_duplicate_id.py  test_req_weak_directive.py  test_review.py  test_sarif.py  test_spec_future_tense_req.py  (+9 more)
(+83 files in other folders)
